[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fortress.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://Soldier.tscn" type="PackedScene" id=3]
[ext_resource path="res://PresetDot.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://EnemyDirector.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Background/Normal.png" type="Texture" id=7]
[ext_resource path="res://Assets/Background/Wall.png" type="Texture" id=8]
[ext_resource path="res://Scripts/EnemyReminder.gd" type="Script" id=9]

[node name="World" type="Node2D"]
script = ExtResource( 2 )
Soldier = ExtResource( 3 )

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="UpgradePanel" parent="GUI" index="3"]
visible = false

[node name="VBoxContainer" parent="GUI/UpgradePanel/ScrollContainer" index="0"]
margin_right = 776.0

[node name="WorldFrom" type="Label" parent="."]
margin_left = 171.239
margin_top = 573.403
margin_right = 212.239
margin_bottom = 587.403
text = "From: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldTo" type="Label" parent="."]
margin_left = 171.239
margin_top = 599.747
margin_right = 211.239
margin_bottom = 613.747
text = "To: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldSuccess" type="Label" parent="."]
margin_left = 172.436
margin_top = 629.684
margin_right = 223.436
margin_bottom = 643.684
text = "Success"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fortress" parent="." instance=ExtResource( 1 )]
position = Vector2( 922.38, 559.236 )

[node name="PresetDot" parent="." instance=ExtResource( 4 )]
position = Vector2( 483.848, 251.82 )

[node name="PresetDot2" parent="." instance=ExtResource( 4 )]
position = Vector2( 868.601, 185.59 )

[node name="PresetDot3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1265.03, 266.114 )

[node name="PresetDot4" parent="." instance=ExtResource( 4 )]
position = Vector2( 1420.41, 584.411 )

[node name="PresetDot5" parent="." instance=ExtResource( 4 )]
position = Vector2( 1079.77, 853.667 )

[node name="PresetDot6" parent="." instance=ExtResource( 4 )]
position = Vector2( 583.328, 799.385 )

[node name="PresetDot7" parent="." instance=ExtResource( 4 )]
position = Vector2( 379.656, 553.82 )

[node name="EnemyReminder" type="Label" parent="."]
margin_left = 783.69
margin_top = 376.327
margin_right = 943.69
margin_bottom = 390.327
text = "Enemies will spawn in: "
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDirector" parent="." instance=ExtResource( 6 )]

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Wall" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="GUI/ActionPanel/VBoxContainer/SoldierGen" to="." method="_on_SoldierGen_pressed"]

[editable path="GUI"]
